<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".FormAbastecimentoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etKMAtuaVeic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/km_atual"
            android:inputType="number"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLAbastecidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/L_abastecidos"
            android:inputType="number"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="193dp"
        app:layout_constraintTop_toTopOf="parent">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spPostos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:ms_enableFloatingLabel="true"
            app:ms_hint="@string/prioridade" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDtaAbastecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/lbl_dta_abaste"
            android:onClick="selecionarDta" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnExcluirDadosAbastecimento"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/btn_excluir"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvarDadosAbastecimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSalvarDadosAbastecimento"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:background="#204E7A"
        android:onClick="salvarAbastecimento"
        android:text="@string/btn_salvar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>