<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_resul_autonomia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_resul_autonomia"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_unidade_medida_autonomia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:text="@string/lbl_unidade_medida_autonomia"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_resul_autonomia"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_abastecimento"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginTop="139dp"
        android:background="#204E7A"
        android:onClick="btnAbastecimentos"
        android:text="@string/btn_abastecimentos"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_unidade_medida_autonomia"
        app:layout_constraintVertical_bias="0.292" />

</androidx.constraintlayout.widget.ConstraintLayout>